fix plugin loading in KDE SC 4.10.0

Thanks to Dorian and Loïc for finding the root of this issue.

BUG: 314530
FIXED-IN: 4.10.1